[package]
name = "typstapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typst = { git = "https://github.com/typst/typst.git", tag = "v0.9.0" }
typst-library = { git = "https://github.com/typst/typst.git", tag = "v0.9.0" }
actix-multipart = "0.6.1"
actix-web = "4"
fontdb = "0.16.0"
comemo = "0.3"
chrono = { version = "0.4.24", default-features = false, features = ["clock", "std"] }
futures-util = "0.3.29"
